--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix Frontend && npm run build --prefix Frontend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Xiaoxuan-Val/testHeroku.git"
+  },
+  "author": "Xiaoxuan Li",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
